build: split snapfx into core and demo gradle modules